--- a/more-info/contact.html
+++ b/more-info/contact.html
@@ -9,8 +9,8 @@
 
   <body>
     <!-- Thêm các link điều hướng -->
-    <a href="/index.html">Home</a>
-    <a href="/more-info/my-skill.html">My Skill</a>
+    <a href="../index.html">Home</a>
+    <a href="../more-info/my-skill.html">My Skill</a>
     <h1>Contact Me</h1>
     <p>
       Tel: +123456789 <br />
