--- a/more-info/my-skill.html
+++ b/more-info/my-skill.html
@@ -9,8 +9,8 @@
 
   <body>
     <!-- Thêm các link điều hướng -->
-    <a href="/index.html">Home</a>
-    <a href="/more-info/contact.html">Contact Me</a>
+    <a href="../index.html">Home</a>
+    <a href="../more-info/contact.html">Contact Me</a>
     <h1>My skill</h1>
     <p>
       Xin chào! Tôi là một Creative Director and Designer (Giám đốc sáng tạo và
